--- a/Dockerfile-OpenMPI
+++ b/Dockerfile-OpenMPI
@@ -1,5 +1,5 @@
 ARG BASEOS
-FROM nix_${BASEOS}_base:44cce3d948f38408bc97addb699ba02cc479df8e
+FROM cornellcac/nix_${BASEOS}_base:2cd324f48c57f66d476a7894c6a957a78e49b116
 
 # variables exported from https://github.com/federatedcloud/NixTemplates/blob/develop/Dockerfile-Base
 # $nixuser
@@ -94,6 +94,7 @@ COPY DataInPaper ${HOME}/Lake_Problem_DPS/DataInPaper
 COPY FigureGeneration ${HOME}/Lake_Problem_DPS/FigureGeneration
 COPY Optimization ${HOME}/Lake_Problem_DPS/Optimization
 COPY Re-evaluation ${HOME}/Lake_Problem_DPS/Re-evaluation
+COPY run_lake_problem.sh ${HOME}/Lake_Problem_DPS
 
 COPY Optimization/moeaframework.h ${HOME}/Lake_Problem_DPS/Optimization/borg
 COPY Optimization/moeaframework.c ${HOME}/Lake_Problem_DPS/Optimization/borg
@@ -109,7 +110,6 @@ RUN chown -R ${nixuser}:${nixuser} ${HOME}/Lake_Problem_DPS/Re-evaluation
 USER $nixuser
 COPY Docker/default.nix $ENVSDIR/
 RUN $nixenv && cd /tmp && nix-shell $ENVSDIR/default.nix --run ${HOME}/Lake_Problem_DPS/Optimization/DPS/compile_DPS.sh
-RUN $nixenv && cd /tmp && nix-shell $ENVSDIR/default.nix --run ${HOME}/Lake_Problem_DPS/Optimization/Intertemporal/compile_IT.sh
 USER root
 
 RUN passwd -d $nixuser
